crates/pgls_pretty_print/tests/snapshots/single/tests__complex_select_part_3_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/complex_select_part_3.sql
snapshot_kind: text
---
SELECT
  view_id,
  view_schema,
  view_name,
  json_array_elements(
  view_definition -> 0 ->
  'targetList'
  )
  AS entry
FROM
  transform_json;
