crates/pgls_pretty_print/tests/snapshots/single/tests__complex_select_part_4_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/complex_select_part_4_100.sql
snapshot_kind: text
---
SELECT
  view_id,
  view_schema,
  view_name,
  CAST(entry ->> 'resno' AS INT) AS view_column,
  CAST(entry ->> 'resorigtbl' AS OID) AS resorigtbl,
  CAST(entry ->> 'resorigcol' AS INT) AS resorigcol
FROM
  target_entries;
