crates/pgls_pretty_print/tests/snapshots/single/tests__complex_select_part_5_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/complex_select_part_5_60.sql
snapshot_kind: text
---
SELECT
  r.*,
  FALSE,
  ARRAY[resorigtbl]
FROM
  results
  AS r
WHERE
  TRUE
UNION ALL
SELECT
  view.view_id,
  view.view_schema,
  view.view_name,
  view.view_column,
  tab.resorigtbl,
  tab.resorigcol,
  tab.resorigtbl = ANY (path),
  path ||
  tab.resorigtbl
FROM
  recursion
  AS view
  INNER JOIN results
  AS tab
  ON view.resorigtbl =
    tab.view_id AND
    view.resorigcol =
    tab.view_column
WHERE
  NOT is_cycle;
