crates/pgls_pretty_print/tests/snapshots/single/tests__complex_select_part_6_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/complex_select_part_6.sql
snapshot_kind: text
---
select
  view_id,
  view_schema,
  view_name,
  resorigtbl,
  resorigcol,
  array_agg(attname) as view_columns
from
  recursion
  inner join
    pg_attribute as vcol
  on vcol.attrelid = view_id and
    vcol.attnum = view_column
group by view_id,
  view_schema,
  view_name,
  resorigtbl,
  resorigcol;
